--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -1,10 +1,9 @@
 
-{{products.length}}
 
 
 {{# each products }}
   <div class="row">
-    
+    {{# each this}}
       <div class="col-sm-6 col-md-4">
         <div class="thumbnail">
           <img src="{{this.imagePath}}" alt="..." class="img-responsive">
@@ -18,7 +17,7 @@
           </div>
         </div>
       </div>
-     
+     {{/each}}
   </div>
 {{/each}}
 
