Ya entran y salen cuentas

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -25,7 +25,7 @@
               <li role="separator" class="divider"></li>
               <li><a href="/user/logout">Logout</a></li>
             {{else}}
-              li><a href="/user/signup"> Sign Up</a></li>
+              <li><a href="/user/signup"> Sign Up</a></li>
               <li><a href="/user/signin">Sign In</a></li>
             {{/if}}
             
