--- a/views/shop/shopping-cart.hbs
+++ b/views/shop/shopping-cart.hbs
@@ -1,36 +1,49 @@
-<div class="row">
-	<div class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
-		<ul class="list-group">
-			<li class="list-group-item">
-				<span class="badge">2</span>
-				<strong>Title</strong>
-				<span class="label label-success">$12</span>
-				<div class="btn-group">
-					<button class="btn btn-primary btn-xs dropdown-toggle" type="button">Action<span class="caret"></span></button>
-					<ul class="dropdown-menu">
-						<li><a href="#">Reduce by 1</a></li>
-						<li><a href="#>Remove All</a></li>
-					</ul>
-				</div>
-			</li>
-		</ul>
-	</div>
-</div>
+{{#each products}}
+	1
+{{/each}}
 
-<div class="row">
-	<div class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
-		<strong>Total: </strong>
+{{# if products}}
+	{{products.length}}
+	<div class="row">
+		<div class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
+			<ul class="list-group">
+				{{# each products}}
+					<li class="list-group-item">
+						<span class="badge">{{this.qty}}</span>
+						<strong>{{this.item.title}}</strong>
+						<span class="label label-success">${{this.price}}</span>
+						<div class="btn-group">
+							<button class="btn btn-primary btn-xs dropdown-toggle" type="button">Action<span class="caret"></span></button>
+							<ul class="dropdown-menu">
+								<li><a href="#">Reduce by 1</a></li>
+								<li><a href="#>Remove All</a></li>
+							</ul>
+						</div>
+					</li>
+				{{/each}}
+				
+			</ul>
+		</div>
 	</div>
-</div>
 
-<div class="row">
-	<div class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
-		<button type="button" class="btn btn-succes"> Checkout </button>
+	<div class="row">
+		<div class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
+			<strong>Total: {{totalPrice}}</strong>
+		</div>
 	</div>
-</div>
 
-<div class="row">
-	<div class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
-		<h1> No Items in Cart </h2>
+	<div class="row">
+		<div class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
+			<button type="button" class="btn btn-succes"> Checkout </button>
+		</div>
 	</div>
-</div>
+{{else}}
+	<div class="row">
+		<div class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
+			<h1> No Items in Cart </h2>
+		</div>
+	</div>
+{{/if}}
+
+
+
