--- a/views/shop/shopping-cart.hbs
+++ b/views/shop/shopping-cart.hbs
@@ -1,22 +1,19 @@
-{{#each products}}
-	1
-{{/each}}
+
 
 {{# if products}}
-	{{products.length}}
 	<div class="row">
 		<div class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
 			<ul class="list-group">
-				{{# each products}}
+				{{#each products}}
 					<li class="list-group-item">
 						<span class="badge">{{this.qty}}</span>
 						<strong>{{this.item.title}}</strong>
 						<span class="label label-success">${{this.price}}</span>
 						<div class="btn-group">
-							<button class="btn btn-primary btn-xs dropdown-toggle" type="button">Action<span class="caret"></span></button>
+							<button class="btn btn-primary btn-xs dropdown-toggle" type="button" data-toggle="dropdown">Action<span class="caret"></span></button>
 							<ul class="dropdown-menu">
-								<li><a href="#">Reduce by 1</a></li>
-								<li><a href="#>Remove All</a></li>
+								<li><a href="/reduce/{{this.item._id}}">Reduce by 1</a></li>
+								<li><a href="/remove/{{this.item._id}}">Remove All</a></li>
 							</ul>
 						</div>
 					</li>
@@ -28,13 +25,13 @@
 
 	<div class="row">
 		<div class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
-			<strong>Total: {{totalPrice}}</strong>
+			<strong>Total: ${{totalPrice}}</strong>
 		</div>
 	</div>
 
 	<div class="row">
 		<div class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
-			<button type="button" class="btn btn-succes"> Checkout </button>
+			<a href="/checkout" type="button" class="btn btn-success">Checkout</button>
 		</div>
 	</div>
 {{else}}
